# claude-code-proxy

./: .env.example  .replit  README.md  pyproject.toml  replit.md  server.py  test_azure.py  verify_azure_models.py
providers/: __init__.py  anthropic.py  azure.py  base.py  gemini.py  openai.py  registry.py
tests/: __init__.py  test_azure_mapping.py  test_modular_providers.py
