[project]
name = "anthropic-proxy"
version = "2.0.0"
description = "Proxy that translates between Anthropic API and LiteLLM with modular provider support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "uvicorn>=0.34.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "litellm>=1.40.14",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["providers*"]

[tool.setuptools]
py-modules = ["server"]

# Optional CLI entry point (can be used with: python -m anthropic-proxy)
# [project.scripts]
# anthropic-proxy = "server:main"

